--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,12 +12,18 @@
     "@headlessui/react": "^2.2.0",
     "@heroicons/react": "^2.2.0",
     "@tanstack/react-query": "^5.60.5",
+    "@vercel/postgres": "^0.7.2",
+    "bcryptjs": "^2.4.3",
     "date-fns": "^4.1.0",
     "next": "15.0.3",
+    "next-auth": "^4.24.10",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "mssql": "^9.1.1"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.6",
+    "@types/mssql": "^8.1.2",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
