--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,11 +15,12 @@
     "@vercel/postgres": "^0.7.2",
     "bcryptjs": "^2.4.3",
     "date-fns": "^4.1.0",
+    "mssql": "^9.1.1",
     "next": "15.0.3",
     "next-auth": "^4.24.10",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "mssql": "^9.1.1"
+    "react-hot-toast": "^2.4.1"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
@@ -31,6 +32,7 @@
     "eslint-config-next": "15.0.3",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
+    "autoprefixer": "^10.4.14",
     "typescript": "^5"
   }
 }
