--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,12 +22,14 @@
     "@vercel/postgres": "^0.7.2",
     "bcryptjs": "^2.4.3",
     "date-fns": "^4.1.0",
+    "framer-motion": "^11.11.17",
     "mssql": "^9.1.1",
     "next": "15.0.3",
     "next-auth": "^4.24.10",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-hot-toast": "^2.4.1"
+    "react-hot-toast": "^2.4.1",
+    "react-icons": "^5.3.0"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
