--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -3,13 +3,17 @@
     "next/core-web-vitals",
     "plugin:@typescript-eslint/recommended"
   ],
+  "parser": "@typescript-eslint/parser",
+  "plugins": ["@typescript-eslint"],
   "rules": {
-    "@typescript-eslint/no-unused-vars": ["error", {
-      "argsIgnorePattern": "^_",
-      "varsIgnorePattern": "^_"
-    }],
-    "react/no-unescaped-entities": "off",
-    "@typescript-eslint/no-explicit-any": "error",
-    "@next/next/no-img-element": "warn"
+    "@typescript-eslint/no-unused-vars": [
+      "error",
+      {
+        "argsIgnorePattern": "^_|^(profile|account)$",
+        "varsIgnorePattern": "^_",
+        "ignoreRestSiblings": true
+      }
+    ],
+    "react/no-unescaped-entities": "off"
   }
 }
