--- a/package.json
+++ b/package.json
@@ -15,7 +15,6 @@
     "db:cleanup": "ts-node --project scripts/tsconfig.json scripts/cleanup-database.ts"
   },
   "dependencies": {
-    "@auth/prisma-adapter": "^2.7.4",
     "@headlessui/react": "^2.2.0",
     "@heroicons/react": "^2.2.0",
     "@hookform/resolvers": "^3.9.1",
@@ -54,6 +53,7 @@
   "devDependencies": {
     "@shadcn/ui": "^0.0.4",
     "@tailwindcss/forms": "^0.5.9",
+    "@types/bcrypt": "^5.0.2",
     "@types/bcryptjs": "^2.4.6",
     "@types/mssql": "^8.1.2",
     "@types/node": "^20.17.6",
