--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "prisma generate && next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "postinstall": "prisma generate"
   },
   "dependencies": {
     "@headlessui/react": "^2.2.0",
@@ -22,7 +23,6 @@
     "@tanstack/react-query": "^5.61.4",
     "@tanstack/react-query-devtools": "^5.62.0",
     "@vercel/postgres": "^0.7.2",
-    "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -30,35 +30,33 @@
     "framer-motion": "^11.12.0",
     "lucide-react": "^0.461.0",
     "mssql": "^9.1.1",
-    "next": "15.0.3",
-    "next-auth": "^4.24.10",
+    "next": "14.1.0",
+    "next-auth": "^4.24.5",
     "next-themes": "^0.4.3",
-    "react": "^18.3.1",
+    "react": "^18.2.0",
     "react-day-picker": "^9.4.0",
-    "react-dom": "^18.3.1",
+    "react-dom": "^18.2.0",
     "react-hook-form": "^7.53.2",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.3.0",
     "resend": "^4.0.1",
-    "shadcn-ui": "^0.9.3",
     "sonner": "^1.7.0",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.23.8"
   },
   "devDependencies": {
-    "@types/bcrypt": "^5.0.2",
     "@types/bcryptjs": "^2.4.6",
     "@types/mssql": "^8.1.2",
     "@types/node": "^20.17.6",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "autoprefixer": "^10.4.14",
-    "eslint": "^8",
-    "eslint-config-next": "15.0.3",
-    "postcss": "^8",
+    "@types/react": "^18.2.55",
+    "@types/react-dom": "^18.2.19",
+    "autoprefixer": "^10.4.17",
+    "eslint": "^8.56.0",
+    "eslint-config-next": "14.1.0",
+    "postcss": "^8.4.35",
     "prisma": "^5.22.0",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5.6.3"
+    "typescript": "^5.3.3"
   }
 }
