--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "build": "prisma generate && next build",
     "start": "next start",
     "lint": "next lint",
-    "postinstall": "prisma generate"
+    "postinstall": "prisma generate",
+    "build:prod": "node scripts/build-prod.js",
+    "deploy:azure": "npm run build:prod && az webapp up --name pet-arogya --resource-group pet-arogya-rg --runtime \"node|18\" --sku B1"
   },
   "dependencies": {
     "@headlessui/react": "^2.2.0",
