--- a/.github/workflows/main_petarogyainstance.yml
+++ b/.github/workflows/main_petarogyainstance.yml
@@ -15,6 +15,7 @@ env:
   DATABASE_URL: ${{ secrets.DATABASE_URL }}
   GOOGLE_CLIENT_ID: ${{ secrets.GOOGLE_CLIENT_ID }}
   GOOGLE_CLIENT_SECRET: ${{ secrets.GOOGLE_CLIENT_SECRET }}
+  NODE_ENV: production
 
 jobs:
   build:
@@ -24,13 +25,15 @@ jobs:
       - uses: actions/checkout@v4
 
       - name: Set up Node.js version
-        uses: actions/setup-node@v3
+        uses: actions/setup-node@v4
         with:
           node-version: '18.x'
           cache: 'npm'
 
       - name: Install dependencies
-        run: npm ci
+        run: |
+          npm ci
+          npm cache clean --force
 
       - name: Generate Prisma Client
         run: npx prisma generate
@@ -38,8 +41,16 @@ jobs:
       - name: Build Next.js app
         run: npm run build
 
-      - name: Zip artifact for deployment
-        run: zip release.zip ./* -r
+      - name: Prepare deployment package
+        run: |
+          mkdir -p deployment
+          cp -r .next deployment/.next
+          cp -r public deployment/public
+          cp package.json deployment/package.json
+          cp package-lock.json deployment/package-lock.json
+          cp next.config.js deployment/next.config.js
+          cd deployment
+          zip -r ../release.zip ./*
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
