--- a/package.json
+++ b/package.json
@@ -1,64 +1,59 @@
 {
-  "name": "pet_arogya",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "prisma generate && next build",
-    "start": "next start",
-    "lint": "next lint",
-    "postinstall": "prisma generate",
-    "build:prod": "node scripts/build-prod.js",
-    "deploy:azure": "npm run build:prod && az webapp up --name pet-arogya --resource-group pet-arogya-rg --runtime \"node|18\" --sku B1"
-  },
-  "dependencies": {
-    "@headlessui/react": "^2.2.0",
-    "@heroicons/react": "^2.2.0",
-    "@hookform/resolvers": "^3.9.1",
-    "@next-auth/prisma-adapter": "^1.0.7",
-    "@prisma/client": "^5.22.0",
-    "@radix-ui/react-dropdown-menu": "^2.1.2",
-    "@radix-ui/react-form": "^0.1.0",
-    "@radix-ui/react-hover-card": "^1.1.2",
-    "@radix-ui/react-slot": "^1.1.0",
-    "@radix-ui/react-tabs": "^1.1.1",
-    "@tanstack/react-query": "^5.61.4",
-    "@tanstack/react-query-devtools": "^5.62.0",
-    "@vercel/postgres": "^0.7.2",
-    "bcryptjs": "^2.4.3",
-    "class-variance-authority": "^0.7.1",
-    "clsx": "^2.1.1",
-    "date-fns": "^4.1.0",
-    "framer-motion": "^11.12.0",
-    "lucide-react": "^0.461.0",
-    "mssql": "^9.1.1",
-    "next": "14.1.0",
-    "next-auth": "^4.24.5",
-    "next-themes": "^0.4.3",
-    "react": "^18.2.0",
-    "react-day-picker": "^9.4.0",
-    "react-dom": "^18.2.0",
-    "react-hook-form": "^7.53.2",
-    "react-hot-toast": "^2.4.1",
-    "react-icons": "^5.3.0",
-    "resend": "^4.0.1",
-    "sonner": "^1.7.0",
-    "tailwind-merge": "^2.5.5",
-    "tailwindcss-animate": "^1.0.7",
-    "zod": "^3.23.8"
-  },
-  "devDependencies": {
-    "@types/bcryptjs": "^2.4.6",
-    "@types/mssql": "^8.1.2",
-    "@types/node": "^20.17.6",
-    "@types/react": "^18.2.55",
-    "@types/react-dom": "^18.2.19",
-    "autoprefixer": "^10.4.17",
-    "eslint": "^8.56.0",
-    "eslint-config-next": "14.1.0",
-    "postcss": "^8.4.35",
-    "prisma": "^5.22.0",
-    "tailwindcss": "^3.4.1",
-    "typescript": "^5.3.3"
-  }
+    "private": true,
+    "name": "pet_arogya",
+    "version": "0.1.0",
+    "scripts": {
+        "lint": "next lint",
+        "build": "prisma generate && next build",
+        "dev": "next dev",
+        "postinstall": "prisma generate",
+        "start": "next start"
+    },
+    "dependencies": {
+        "@headlessui/react": "^2.2.0",
+        "@heroicons/react": "^2.2.0",
+        "@hookform/resolvers": "^3.9.1",
+        "@next-auth/prisma-adapter": "^1.0.7",
+        "@prisma/client": "^6.0.0",
+        "@radix-ui/react-dropdown-menu": "^2.1.2",
+        "@radix-ui/react-form": "^0.1.0",
+        "@radix-ui/react-hover-card": "^1.1.2",
+        "@radix-ui/react-slot": "^1.1.0",
+        "@radix-ui/react-tabs": "^1.1.1",
+        "@tanstack/react-query": "^5.62.0",
+        "@tanstack/react-query-devtools": "^5.62.0",
+        "bcryptjs": "^2.4.3",
+        "class-variance-authority": "^0.7.1",
+        "clsx": "^2.1.1",
+        "date-fns": "^4.1.0",
+        "framer-motion": "^11.12.0",
+        "lucide-react": "^0.462.0",
+        "next": "^15.0.3",
+        "next-auth": "^4.24.10",
+        "next-themes": "^0.4.3",
+        "prisma": "^6.0.0",
+        "react": "^18.3.1",
+        "react-day-picker": "^9.4.0",
+        "react-dom": "^18.3.1",
+        "react-hook-form": "^7.53.2",
+        "react-hot-toast": "^2.4.1",
+        "react-icons": "^5.3.0",
+        "resend": "^4.0.1",
+        "sonner": "^1.7.0",
+        "tailwind-merge": "^2.5.5",
+        "tailwindcss-animate": "^1.0.7",
+        "zod": "^3.23.8"
+    },
+    "devDependencies": {
+        "@tailwindcss/forms": "^0.5.9",
+        "@types/node": "^22.10.1",
+        "@types/react": "^18.3.12",
+        "@types/react-dom": "^18.3.1",
+        "autoprefixer": "^10.4.20",
+        "eslint": "^9.16.0",
+        "eslint-config-next": "^15.0.3",
+        "postcss": "^8.4.49",
+        "tailwindcss": "^3.4.15",
+        "typescript": "^5.7.2"
+    }
 }
