--- a/.github/workflows/main_petarogyainstance.yml
+++ b/.github/workflows/main_petarogyainstance.yml
@@ -28,29 +28,15 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: '18.x'
-          cache: 'npm'
 
       - name: Install dependencies
-        run: |
-          npm ci
-          npm cache clean --force
-
-      - name: Generate Prisma Client
-        run: npx prisma generate
+        run: npm install
 
       - name: Build Next.js app
         run: npm run build
 
-      - name: Prepare deployment package
-        run: |
-          mkdir -p deployment
-          cp -r .next deployment/.next
-          cp -r public deployment/public
-          cp package.json deployment/package.json
-          cp package-lock.json deployment/package-lock.json
-          cp next.config.js deployment/next.config.js
-          cd deployment
-          zip -r ../release.zip ./*
+      - name: Zip artifact for deployment
+        run: zip -r release.zip ./* -x "node_modules/*"
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
@@ -74,6 +60,9 @@ jobs:
       - name: Unzip artifact for deployment
         run: unzip release.zip
       
+      - name: Install production dependencies
+        run: npm install --production
+
       - name: 'Deploy to Azure Web App'
         id: deploy-to-webapp
         uses: azure/webapps-deploy@v3
