--- a/.github/workflows/main_petarogyainstance.yml
+++ b/.github/workflows/main_petarogyainstance.yml
@@ -61,7 +61,7 @@ jobs:
         run: unzip release.zip
       
       - name: Install production dependencies
-        run: npm install --production
+        run: npm install
 
       - name: 'Deploy to Azure Web App'
         id: deploy-to-webapp
