--- a/package.json
+++ b/package.json
@@ -23,6 +23,9 @@
         "@tanstack/react-query": "^5.62.0",
         "@tanstack/react-query-devtools": "^5.62.0",
         "@tailwindcss/forms": "^0.5.9",
+        "@types/node": "^22.10.1",
+        "@types/react": "^18.3.12",
+        "@types/react-dom": "^18.3.1",
         "autoprefixer": "^10.4.20",
         "bcryptjs": "^2.4.3",
         "class-variance-authority": "^0.7.1",
@@ -46,14 +49,11 @@
         "tailwind-merge": "^2.5.5",
         "tailwindcss": "^3.4.15",
         "tailwindcss-animate": "^1.0.7",
-        "zod": "^3.23.8"
-    },
-    "devDependencies": {
-        "@types/node": "^22.10.1",
-        "@types/react": "^18.3.12",
-        "@types/react-dom": "^18.3.1",
+        "zod": "^3.23.8",
         "eslint": "^9.16.0",
         "eslint-config-next": "^15.0.3",
         "typescript": "^5.7.2"
+    },
+    "devDependencies": { 
     }
 }
