--- a/.github/workflows/main_petarogyainstance.yml
+++ b/.github/workflows/main_petarogyainstance.yml
@@ -9,6 +9,9 @@ on:
       - main
   workflow_dispatch:
 
+env:
+  RESEND_API_KEY: ${{ secrets.RESEND_API_KEY }}
+
 jobs:
   build:
     runs-on: ubuntu-latest
